// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`Security Scanner Matrix Tests bun install "no args" (node_modules: false) --linker=hoisted (scanner: npm) (returns: clean) 0022: requested-packages: install 1`] = `
[
  "test-security-scanner",
  "left-pad",
]
`;

exports[`Security Scanner Matrix Tests bun install "no args" (node_modules: false) --linker=hoisted (scanner: npm) (returns: clean) 0022: requested-tarballs: install 1`] = `
[
  "/test-security-scanner-1.0.0.tgz",
  "/left-pad-1.3.0.tgz",
]
`;

exports[`Security Scanner Matrix Tests bun install "no args" (node_modules: false) --linker=isolated (scanner: local) (returns: clean) 0028: requested-packages: install 1`] = `
[
  "left-pad",
]
`;

exports[`Security Scanner Matrix Tests bun install "no args" (node_modules: false) --linker=isolated (scanner: local) (returns: clean) 0028: requested-tarballs: install 1`] = `
[
  "/left-pad-1.3.0.tgz",
]
`;
